2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyMembershipHelper.cs: fixed Users_DeleteUser, commented delete
	from Personalization table

2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyDBSchema.cs: fixed GetSchemaVersion, return nullif DB does
	not exist

2007-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyDBSchema.cs: added version table, refactored schema
	initialization
	* DerbyMembershipProvider.cs,
	* DerbyRoleProvider.cs: added schema version or existence checking on
	creating connection

2007-01-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyDBSchema.cs: fixed schema to work with cloudscape
	* DerbyMembershipHelper.cs: fixed table fields to work with cloudscape

2007-01-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added CloudscapeMembershipProvider.cs, CloudscapeRoleProvider.cs

2007-01-04  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyMembershipProvider.cs: fixed encoding of password

2006-12-21  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyMembershipProvider.cs: fixed provider key to be Guid

2006-12-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyDBSchema.cs: Added derby db unload functionality

2006-11-26  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyMembershipHelper.cs:
	* DerbyMembershipProvider.cs: fixed CreateUser method, when user
	already exists in Users table and adding Membership info